--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
 rvm: 2.4.1
 before_script: gem install awesome_bot
-script: awesome_bot README.md
+script: awesome_bot README.md --allow-dupe --allow-redirect --allow-timeout -t 5 --allow 403,429
+notifications:
+  email: false
